k8s/pi-hole.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-hole-blocker 
  namespace: pi-hole
  labels:
    k8s-app: pi-hole-blocker
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: pi-hole-blocker
  template:
    metadata:
      name: pi-hole-blocker  
      labels:
        k8s-app: pi-hole-blocker
    spec:
      serviceAccount: pi-hole-blocker-sa
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      containers:
      - name: pi-hole
        image: pihole/pihole:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 1Gi
        ports:
        - containerPort: 53
          hostPort: 53
          protocol: TCP
        - containerPort: 53
          hostPort: 53
          protocol: UDP
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: pihole-etc
          mountPath: /etc/pihole/  
        - name: pihole-dns
          mountPath: /etc/dnsmasq.d/
      nodeName: bjz01-tst-003
      dnsConfig:
        nameservers:
          - 127.0.0.1
          - 9.9.9.9
      volumes:
      - name: pihole-etc
        persistentVolumeClaim:
          claimName: pi-hole-blocker-etc-pvc
      - name: pihole-dns
        persistentVolumeClaim:
          claimName: pi-hole-blocker-dns-pvc
