k8s/pi-hole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: pi-hole-blocker
  name: pi-hole-svc
  namespace: pi-hole
spec:
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 443
      name: http
  selector:
    k8s-app: pi-hole-blocker
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: pi-hole-blocker
  name: pi-hole-svc-nodeport
  namespace: pi-hole
spec:
  type: NodePort
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 443
      name: http
      # Por defecto y por comodidad, el plano de control de Kubernetes asignará el puerto desde un rango (por defecto: 30000-32767)
      nodePort: 30000
  selector:
    k8s-app: pi-hole-blocker
